# wgpu_rendering

./: .gitignore  Cargo.toml
src/: camera.rs  color.rs  dynamic_storage.rs  graphics.rs  lib.rs  lines.rs  lines.wgsl  main.rs  rect_circle.rs  rect_circle.wgsl  shader.wgsl  util.rs  vectors.rs
src/graphics/: camera.rs  color.rs  dynamic_storage.rs  lines.rs  lines.wgsl  rect_circle.rs  rect_circle.wgsl  util.rs
