[package]
name = "associative_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1.0"
winit = "0.29.15"
pollster = "0.3.0"
log = "*"
env_logger = "*"

[dependencies.bytemuck]
version = "1.16.3"
features = ["derive"]

[dependencies.rand]
version = "0.9.0-alpha.2"
default-features = false
features = ["small_rng"]