[package]
name = "wgpu_rendering"
version = "0.1.0"
edition = "2021"

[features]
glam = ["dep:glam"]

[dependencies]
wgpu = "22.1.0"
winit = "0.29.15"
pollster = "0.3.0"
log = "*"
env_logger = "*"
take_mut = "0.2.2"
rustc-hash = "2.0.0"
float-ord = "0.3.2"

[dependencies.bytemuck]
version = "1.16.3"
features = ["derive"]

[dependencies.rand]
version = "0.9.0-alpha.2"
default-features = false
features = ["small_rng"]

[dependencies.glam]
optional = true
version = "0.29.0"
default-features = false
features = ["libm"]